--- a/static/style.css
+++ b/static/style.css
@@ -16,6 +16,10 @@ background-color: #2b2d42 !important;
   transform: translateY(-50%);
   top: 50%;
 }
+.carousel-caption h5{
+  font-family: 'Bebas Neue', sans-serif;
+  font-size: 7rem;
+}
 
 .c-item {
   height: 712px;
@@ -28,7 +32,7 @@ background-color: #2b2d42 !important;
 }
 
 .form_width {
-  max-width: 800px;
+  max-width: 850px;
   /* set the maximum width for the form */
   width: 100%;
   /* make sure the form fills the available space */
@@ -36,22 +40,18 @@ background-color: #2b2d42 !important;
   /* center the form inside the container */
 }
 
-
-/* body{
-  animation: transitionIn 0.75s;
+.progress-bar {
+  width: 100%;
+  height: 10px;
+  background-color: #f2f2f2;
 }
 
-@keyframes transitionIn {
-  from{
-    opacity: 0;
-    transform: translateY(-10px);
-  }
-
-  to{
-    opacity: 1;
-    transform: translateY(0);
-  }
-} */
+.progress {
+  height: 100%;
+  background-color: #4CAF50;
+  width: 0%;
+  transition: width 0.5s ease-in-out;
+}
 
 .info-color {
   background-color: #2E2E2E;
@@ -70,28 +70,14 @@ a:link {
   text-decoration: none;
 }
 
-/*   
-  a:visited {
-    color: pink;
-    background-color: transparent;
-    text-decoration: none;
-  } */
-
 a:hover {
   color: rgb(135, 239, 234);
   background-color: transparent;
   text-decoration: underline;
 }
 
-/*   
-  a:active {
-    color: yellow;
-    background-color: transparent;
-    text-decoration: underline;
-  } */
-
 .opaque-navbar {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.2);
   /* Transparent = rgba(0,0,0,0) / Translucent = (0,0,0,0.5)  */
   height: 60px;
   border-bottom: 0px;
@@ -99,7 +85,7 @@ a:hover {
 }
 
 .opaque-navbar.opaque {
-  background-color: black;
+  background-color: #2E2E2E;
   height: 60px;
   transition: background-color .5s ease 0s;
 }
@@ -113,10 +99,7 @@ a:hover {
   width: 90px;
   height: 33px;
 }
-.{
-  padding: 10px 20px;
-  width: 50%;
-}
+
 
 .heading {
   font-size: 3.125rem;
@@ -168,7 +151,4 @@ body {
   font-weight: bold;
 }
 
-/* .logo {
-  height: 16px;
-  max-width: 16px;
-} */
+
