--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home | HOPE</title>
-  <link rel="icon" href="../static/images/page_title_logo.ico" type="image/x-icon">
+  <link rel="icon" href="../static/images/title.ico" type="image/x-icon">
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -31,7 +31,7 @@
   <!-- navbar -->
   <nav class="navbar navbar-dark  navbar-expand-lg fixed-top opaque-navbar">
     <a class="navbar-brand d-flex align-items-center" href="#">
-      <img  class="logo" height="40rem%"  src="../static/images/hope-nav-logo.png" alt="Your Company Logo">      
+      <img class="logo" height="40rem%"  src="../static/images/hope-nav-logo.png" alt="Your Company Logo">      
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,7 +58,7 @@
   <!-- carousel -->
  
   <div class="bd-example">
-    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+    <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
@@ -91,6 +91,7 @@
         </div>
       </div>      
       </a>
+      
 
     </div>
     
@@ -114,8 +115,6 @@
           degree of accuracy. If it predicts a high probability of heart disease, the user is advised to seek further
           medical attention and provide suggestions for preventative measures, such as lifestyle changes and medication
           to prevent serious health complications.
-
-          To determine the condition of your heart, please complete the form.
         </p>
         
       </div>
@@ -126,7 +125,8 @@
   <div id="form-fill" class="container card shadow-lg p-3 mb-5 bg-white rounded form_width">
     <div class="container pt-4 ">
       <div class="text-center ">
-        <h3 >FORM</h3>
+        <h3 style="font-family: 'Bebas Neue', sans-serif; color: #14213d;letter-spacing: 5px;" >FORM</h3>
+        <!-- <p>Please go through the instructions before entering th deails.</p> -->
         <!-- pill trigger modal -->
         <span class="badge badge-pill badge-primary pointer" data-toggle="modal"
           data-target="#exampleModalScrollable">Instructions</span>
