--- a/static/style.css
+++ b/static/style.css
@@ -14,11 +14,12 @@ background-color: #2b2d42 !important;
 
 .carousel-caption {
   transform: translateY(-50%);
-  top: 50%;
+  top: 40%;
 }
 .carousel-caption h5{
   font-family: 'Bebas Neue', sans-serif;
   font-size: 7rem;
+  letter-spacing: 5px;
 }
 
 .c-item {
@@ -44,6 +45,7 @@ background-color: #2b2d42 !important;
   width: 100%;
   height: 10px;
   background-color: #f2f2f2;
+  border-radius: 10px;
 }
 
 .progress {
