--- a/templates/index.html
+++ b/templates/index.html
@@ -326,7 +326,8 @@
           </div>
         </div>
         <div class="text-center">
-          <button type="submit" class="btn btn-success  mt-3 mb-3">Submit</button>
+          <button type="reset" class="btn btn-danger">Reset</button>
+          <button type="submit" class="btn btn-success">Submit</button>          
         </div>
       </div>
     </form>
