--- a/templates/index.html
+++ b/templates/index.html
@@ -216,7 +216,7 @@
                 </tbody>
               </table>
               <div class="text-center">
-                <p>For example choose one of the options below to  to automatically fill in the details.</p>
+                <p>For example choose one of the options below to automatically fill in the details.</p>
                 <button type="button" class="btn btn-success" id="fill-healthy-data" data-dismiss="modal">Healthy Heart</button>
                 <button type="button" class="btn btn-danger"  id="fill-disease-data" data-dismiss="modal">Diseased Heart</button>               
               </div>
