--- a/templates/index.html
+++ b/templates/index.html
@@ -375,8 +375,8 @@
       <h5>Animesh Padhy</h5>
       <div class="custom-details">        
         <div class="icons">
-          <a href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i></a>
-          <a href="https://github.com/" target="_blank"><i class="fab fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/animesh-padhy-2b48a4272/" target="_blank"><i class="fab fa-linkedin"></i></a>
+          <a href="https://github.com/AnimeshPadhy" target="_blank"><i class="fab fa-github"></i></a>
         </div>
       </div>
     </div>
@@ -385,8 +385,8 @@
       <h5>Tanuj Xalxo</h5>
       <div class="custom-details">       
         <div class="icons">
-          <a href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i></a>
-          <a href="https://github.com/" target="_blank"><i class="fab fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/tanuj-manuprit-xalxo-a37792232" target="_blank"><i class="fab fa-linkedin"></i></a>
+          <a href="https://github.com/tanujxalxo27" target="_blank"><i class="fab fa-github"></i></a>
         </div>
       </div>
     </div>
