about, more page updated

--- a/templates/index.html
+++ b/templates/index.html
@@ -357,7 +357,7 @@
     </div>
   </div>
 
-<div class="pt-5">
+<!-- <div class="pt-5">
   <h3 class="font-semibold text-3xl text-center p-10">CONTRIBUTORS</h3>  
   <div class="custom-content">
     <div class="custom-card">      
@@ -391,7 +391,44 @@
       </div>
     </div>
   </div>
+  </div> -->
+<div class="pt-5 pb-5">
+  <h3 class="font-semibold text-3xl text-center p-10 pb-4">CONTRIBUTORS</h3> 
+  <div class="container">
+  <div class="row">
+    <div class="contributor col-md-4">      
+      <img src="..//static/images/contributers/Akash.jpg" alt="falcon" class="custom-avatar">
+      <h5>Akash Parida</h5>
+      <div class="custom-details">        
+        <div class="icons">
+          <a href="https://www.linkedin.com/in/akash-parida-ap/" target="_blank"><i class="fab fa-linkedin"></i></a>
+          <a href="https://github.com/akash5k" target="_blank"><i class="fab fa-github"></i></a>
+        </div>
+      </div>
+    </div>
+    <div class="contributor col-md-4">
+      <img src="..//static/images/contributers/Animesh.jpg" alt="fox" class="custom-avatar">
+      <h5>Animesh Padhy</h5>
+      <div class="custom-details">        
+        <div class="icons">
+          <a href="https://www.linkedin.com/in/animesh-padhy-2b48a4272/" target="_blank"><i class="fab fa-linkedin"></i></a>
+          <a href="https://github.com/AnimeshPadhy" target="_blank"><i class="fab fa-github"></i></a>
+        </div>
+      </div>
+    </div>
+    <div class="contributor col-md-4">
+      <img src="..//static/images/contributers/Tanuj.jpg" alt="fish" class="custom-avatar">
+      <h5>Tanuj Xalxo</h5>
+      <div class="custom-details">       
+        <div class="icons">
+          <a href="https://www.linkedin.com/in/tanuj-manuprit-xalxo-a37792232" target="_blank"><i class="fab fa-linkedin"></i></a>
+          <a href="https://github.com/tanujxalxo27" target="_blank"><i class="fab fa-github"></i></a>
+        </div>
+      </div>
+    </div>
   </div>
+  </div>
+</div> 
 
   <!-- script to show the responce in alert after predicting  -->
   {% if prediction_text %}
