--- a/static/style.css
+++ b/static/style.css
@@ -155,6 +155,23 @@ body {
 .mhead {
   font-weight: bold;
 }
+.text-with-background {
+  background-image: url("../static/images/LearnMore_img.jpg"); /* Replace "image.jpg" with the path to your background image */
+  background-size: cover;
+  background-position: center;
+  text-align: center;
+  color: #fefefe; /* Set the text color to contrast with the background image */
+  padding: 50px;
+}
+
+.text-with-background2 {
+  background-image: url("../static/images/About_img.jpg"); /* Replace "image.jpg" with the path to your background image */
+  background-size: cover;
+  background-position: center;
+  text-align: center;
+  color: #fefefe; /* Set the text color to contrast with the background image */
+  padding: 50px;
+}
 
 .contributers{
   font-family: 'Bebas Neue', sans-serif;
@@ -235,4 +252,11 @@ body {
 
 .custom-details p {
   font-size: 1rem;
+}
+
+.contributor{  
+    justify-content: center;
+    justify-items: center;
+    display: grid;
+
 }
