--- a/templates/index.html
+++ b/templates/index.html
@@ -215,14 +215,8 @@
                       enter 3 for Reversible defect (Thalassemia Major).</td>
                   </tr>
                 </tbody>
-              </table>
-              <div class="text-center">
-                <p>For example choose one of the options below to automatically fill in the details.</p>
-                <button type="button" class="btn btn-success" id="fill-healthy-data" data-dismiss="modal">Healthy Heart</button>
-                <button type="button" class="btn btn-danger"  id="fill-disease-data" data-dismiss="modal">Diseased Heart</button>               
-              </div>
+              </table>         
 
-              <!-- end -->
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
@@ -255,8 +249,7 @@
                   <option selected>Choose...</option>
                   <option value="1">Male</option>
                   <option value="2">Female</option>
-                </select>
-                <!-- <input type="text" class="form-control" name="sex" placeholder="Enter you sex"> -->
+                </select>                
               </div>
             </div>
           </div>
@@ -357,41 +350,7 @@
     </div>
   </div>
 
-<!-- <div class="pt-5">
-  <h3 class="font-semibold text-3xl text-center p-10">CONTRIBUTORS</h3>  
-  <div class="custom-content">
-    <div class="custom-card">      
-      <img src="..//static/images/contributers/Akash.jpg" alt="falcon" class="custom-avatar">
-      <h5>Akash Parida</h5>
-      <div class="custom-details">        
-        <div class="icons">
-          <a href="https://www.linkedin.com/in/akash-parida-ap/" target="_blank"><i class="fab fa-linkedin"></i></a>
-          <a href="https://github.com/akash5k" target="_blank"><i class="fab fa-github"></i></a>
-        </div>
-      </div>
-    </div>
-    <div class="custom-card">
-      <img src="..//static/images/contributers/Animesh.jpg" alt="fox" class="custom-avatar">
-      <h5>Animesh Padhy</h5>
-      <div class="custom-details">        
-        <div class="icons">
-          <a href="https://www.linkedin.com/in/animesh-padhy-2b48a4272/" target="_blank"><i class="fab fa-linkedin"></i></a>
-          <a href="https://github.com/AnimeshPadhy" target="_blank"><i class="fab fa-github"></i></a>
-        </div>
-      </div>
-    </div>
-    <div class="custom-card">
-      <img src="..//static/images/contributers/Tanuj.jpg" alt="fish" class="custom-avatar">
-      <h5>Tanuj Xalxo</h5>
-      <div class="custom-details">       
-        <div class="icons">
-          <a href="https://www.linkedin.com/in/tanuj-manuprit-xalxo-a37792232" target="_blank"><i class="fab fa-linkedin"></i></a>
-          <a href="https://github.com/tanujxalxo27" target="_blank"><i class="fab fa-github"></i></a>
-        </div>
-      </div>
-    </div>
-  </div>
-  </div> -->
+  <!-- contributers list -->
 <div class="pt-5 pb-5">
   <h3 class="font-semibold text-3xl text-center p-10 pb-4">CONTRIBUTORS</h3> 
   <div class="container">
